k8s-manifests/infrastructure/pihole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: infrastructure
spec:
  type: NodePort
  selector:
    app: pihole
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30850
  - name: dns-tcp
    port: 53
    targetPort: 53
    nodePort: 30853
    protocol: TCP
  - name: dns-udp
    port: 53
    targetPort: 53
    nodePort: 30853
    protocol: UDP
